storage/xtradb/buf/buf0buf.cc
@@ -981,7 +981,7 @@ buf_page_print(
 			mach_read_from_4(read_buf
 					 + FIL_PAGE_ARCH_LOG_NO_OR_SPACE_ID));
 
-		ulint page_type = mach_read_from_4(read_buf + FIL_PAGE_TYPE);
+		ulint page_type = fil_page_get_type(read_buf);
 
 		fprintf(stderr, "InnoDB: page type %ld meaning %s\n", page_type,
 			fil_get_page_type_name(page_type));
